[gd_scene load_steps=10 format=3 uid="uid://e07ugfjne3la"]

[ext_resource type="Script" path="res://init/menu.gd" id="1_dgehd"]
[ext_resource type="Texture2D" uid="uid://dv6ahfxjyew6c" path="res://assets/menu_background.jpg" id="3_ik0qt"]
[ext_resource type="AudioStream" uid="uid://c7n6m1cyhrfca" path="res://assets/menu_music.wav" id="4_gogtv"]
[ext_resource type="FontFile" uid="uid://bd67idorsfuqs" path="res://assets/ARCADE.TTF" id="4_kvrxk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hts7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffnj5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0i00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2aa3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_80vv5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgehd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0
texture = ExtResource("3_ik0qt")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 70.0
offset_right = 1154.0
offset_bottom = 353.0
theme_override_fonts/font = ExtResource("4_kvrxk")
theme_override_font_sizes/font_size = 100
text = "Beatin' countdown"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gogtv")
autoplay = true
bus = &"music"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = 3.0
offset_right = 225.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.792157, 0.435294, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.52549, 0.0784314, 1)
theme_override_fonts/font = ExtResource("4_kvrxk")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_hts7a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ffnj5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_o0i00")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o0i00")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o0i00")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_pressed_color = Color(0.792157, 0.435294, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.52549, 0.0784314, 1)
theme_override_fonts/font = ExtResource("4_kvrxk")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_t2aa3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t2aa3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t2aa3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t2aa3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t2aa3")
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_type_variation = &"FlatButton"
theme_override_colors/font_pressed_color = Color(0.792157, 0.435294, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.937255, 0.52549, 0.0784314, 1)
theme_override_fonts/font = ExtResource("4_kvrxk")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_80vv5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_80vv5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_80vv5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_80vv5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_80vv5")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
